--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My page</title>
-</head>
-<body>
-   <h1>Divenok</h1> 
-</body>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <p><a href="/">WebStudio</a></p>
+        <ul>
+          <li><a href="">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
+        </ul>
+      </nav>
+
+      <address>
+        <a href="mailto:info@devstudio.com"></a>info@devstudio.com
+      </address>
+      <address><a href="tel:+380961111111"></a>+38 096 111 11 11</address>
+    </header>
+    <div></div>
+    <section>
+        <h1>Ефективні рішення<br>для вашого бізнесу</br></h1>
+        <button type="button">Замовити послугу</button>
+    </section>
+  </body>
 </html>
