--- a/index.html
+++ b/index.html
@@ -16,16 +16,96 @@
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
-
-      <address>
-        <a href="mailto:info@devstudio.com"></a>info@devstudio.com
-      </address>
-      <address><a href="tel:+380961111111"></a>+38 096 111 11 11</address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
     </header>
-    <div></div>
+    <main>
     <section>
         <h1>Ефективні рішення<br>для вашого бізнесу</br></h1>
         <button type="button">Замовити послугу</button>
     </section>
+    <section>
+      <h2>Критерії</h2>
+      <ul>
+        <li>
+          <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+          <p>Ідейні міркування, та навіть початок повсякденної роботи з формування позиції.</p>
+        </li>
+        <li>
+          <h3>ПУНКТУАЛЬНІСТЬ</h3>
+          <p>Завдання організації, особливо рамки та місце навчання кадрів тягне у себе.</p>
+        </li>
+        <li>
+          <h3>ПЛАНУВАННЯ</h3>
+          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+        </li>
+        <li>
+          <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+          <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Чим ми займаємося</h2>
+      <ul>
+        <li>
+          <img src="./img/photo 1.svg" alt="створення Web-сторінки у VS Code" width="370px">
+        </li>
+        <li>
+          <img src="./img/photo 2.svg" alt="адаптація Web-сторінки" width="370px">
+        </li>
+        <li>
+          <img src="./img/photo 3.svg" alt="стилізация Web-сторінки у VS Code" width="370px">
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <img src="./img/igor.jpg" alt="Ігор Дем'яненко" width="270px" height="260">
+          <h4>Ігор Дем'яненко</h4>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img src="./img/olga.jpg" alt="Ольга Рєпіна" width="270px" height="260">
+          <h4>Ольга Рєпіна</h4>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img src="./img/nicholas.jpg" alt="Микола Тарасов" width="270px" height="260">
+          <h4>Микола Тарасов</h4>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./img/mykhailo.jpg" alt="Михайло Єрмаков" width="270px" height="260">
+          <h4>Михайло Єрмаков</h4>
+          <p>UI Designer</p>
+        </li>
+      </ul>
+    </section>
+    </main>
+    <footer>
+      <section>
+        <p><a href="/">WebStudio</a></p>
+        <ul>
+          <li>
+            <address>м. Київ, пр-т Лесі Українки, 26</address>
+          </li>
+          <li>
+            <address>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </address>
+          </li>
+          <li>
+            <address>
+              <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </address>
+          </li>
+        </ul>
+      </section>
+    </footer>
   </body>
 </html>
