--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
       <h2>Наша команда</h2>
       <ul>
         <li>
-          <img src="./img/igor.jpg" alt="Ігор Дем'яненко" width="270px" height="260">
+          <img src="./img/igor.jpg" alt="Ігор Дем'яненко" width="270px" height="260px">
           <h4>Ігор Дем'яненко</h4>
           <p>Product Designer</p>
         </li>
         <li>
-          <img src="./img/olga.jpg" alt="Ольга Рєпіна" width="270px" height="260">
+          <img src="./img/olga.jpg" alt="Ольга Рєпіна" width="270px" height="260px">
           <h4>Ольга Рєпіна</h4>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img src="./img/nicholas.jpg" alt="Микола Тарасов" width="270px" height="260">
+          <img src="./img/nicholas.jpg" alt="Микола Тарасов" width="270px" height="260px">
           <h4>Микола Тарасов</h4>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="./img/mykhailo.jpg" alt="Михайло Єрмаков" width="270px" height="260">
+          <img src="./img/mykhailo.jpg" alt="Михайло Єрмаков" width="270px" height="260px">
           <h4>Михайло Єрмаков</h4>
           <p>UI Designer</p>
         </li>
