--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <p><a href="/">WebStudio</a></p>
+        <a href="/">WebStudio</a>
         <ul>
           <li><a href="">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
