--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -51,13 +51,13 @@
       <h2>Чим ми займаємося</h2>
       <ul>
         <li>
-          <img src="./img/photo 1.svg" alt="створення Web-сторінки у VS Code" width="370px">
+          <img src="./img/photo 1.svg" alt="створення Web-сторінки у VS Code" width="370">
         </li>
         <li>
-          <img src="./img/photo 2.svg" alt="адаптація Web-сторінки" width="370px">
+          <img src="./img/photo 2.svg" alt="адаптація Web-сторінки" width="370">
         </li>
         <li>
-          <img src="./img/photo 3.svg" alt="стилізация Web-сторінки у VS Code" width="370px">
+          <img src="./img/photo 3.svg" alt="стилізация Web-сторінки у VS Code" width="370">
         </li>
       </ul>
     </section>
@@ -65,47 +65,41 @@
       <h2>Наша команда</h2>
       <ul>
         <li>
-          <img src="./img/igor.jpg" alt="Ігор Дем'яненко" width="270px" height="260px">
-          <h4>Ігор Дем'яненко</h4>
+          <img src="./img/igor.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+          <h3>Ігор Дем'яненко</h3>
           <p>Product Designer</p>
         </li>
         <li>
-          <img src="./img/olga.jpg" alt="Ольга Рєпіна" width="270px" height="260px">
-          <h4>Ольга Рєпіна</h4>
+          <img src="./img/olga.jpg" alt="Ольга Рєпіна" width="270" height="260">
+          <h3>Ольга Рєпіна</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img src="./img/nicholas.jpg" alt="Микола Тарасов" width="270px" height="260px">
-          <h4>Микола Тарасов</h4>
+          <img src="./img/nicholas.jpg" alt="Микола Тарасов" width="270" height="260">
+          <h3>Микола Тарасов</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="./img/mykhailo.jpg" alt="Михайло Єрмаков" width="270px" height="260px">
-          <h4>Михайло Єрмаков</h4>
+          <img src="./img/mykhailo.jpg" alt="Михайло Єрмаков" width="270" height="260">
+          <h3>Михайло Єрмаков</h3>
           <p>UI Designer</p>
         </li>
       </ul>
     </section>
     </main>
     <footer>
-      <section>
-        <p><a href="/">WebStudio</a></p>
+      <a href="/">WebStudio</a>
         <ul>
           <li>
-            <address>м. Київ, пр-т Лесі Українки, 26</address>
+            <a>м. Київ, пр-т Лесі Українки, 26</a>
           </li>
           <li>
-            <address>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </address>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <address>
-              <a href="tel:+380961111111">+38 096 111 11 11</a>
-            </address>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
-      </section>
     </footer>
   </body>
 </html>
