--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
     </section>
     </main>
     <footer>
-      <a href="/">WebStudio</a>
+      <address>
+        <a href="/">WebStudio</a>
         <ul>
           <li>
             <a>м. Київ, пр-т Лесі Українки, 26</a>
@@ -99,7 +100,7 @@
           <li>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
-        </ul>
+        </ul></address>
     </footer>
   </body>
 </html>
