--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
           <li>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
-        </ul></address>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
