--- a/index.html
+++ b/index.html
@@ -5,30 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="/">WebStudio</a>
-        <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+    <header class="header">
+      <nav class="navigation">
+        <a class="logo link" href="/">WebStudio</a>
+        <ul class="menu list">
+          <li><a class="menu-item link" href="">Студія</a></li>
+          <li><a class="menu-item link" href="">Портфоліо</a></li>
+          <li><a class="menu-item link" href="">Контакти</a></li>
         </ul>
       </nav>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="list">
+          <li><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="phone-namber link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
     <section>
         <h1>Ефективні рішення<br>для вашого бізнесу</br></h1>
-        <button type="button">Замовити послугу</button>
+        <button class="modal-btn" type="button">Замовити послугу</button>
     </section>
     <section>
       <h2>Критерії</h2>
-      <ul>
+      <ul class="list">
         <li>
           <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
           <p>Ідейні міркування, та навіть початок повсякденної роботи з формування позиції.</p>
@@ -49,7 +53,7 @@
     </section>
     <section>
       <h2>Чим ми займаємося</h2>
-      <ul>
+      <ul class="list">
         <li>
           <img src="./img/photo 1.svg" alt="створення Web-сторінки у VS Code" width="370">
         </li>
@@ -63,7 +67,7 @@
     </section>
     <section>
       <h2>Наша команда</h2>
-      <ul>
+      <ul class="list">
         <li>
           <img src="./img/igor.jpg" alt="Ігор Дем'яненко" width="270" height="260">
           <h3>Ігор Дем'яненко</h3>
@@ -89,16 +93,16 @@
     </main>
     <footer>
       <address>
-        <a href="/">WebStudio</a>
-        <ul>
+        <a class="link" href="/">WebStudio</a>
+        <ul class="list">
           <li>
             <a>м. Київ, пр-т Лесі Українки, 26</a>
           </li>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
