--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
       <nav class="navigation">
         <a class="logo link" href="/">WebStudio</a>
         <ul class="menu list">
-          <li><a class="menu-item link" href="">Студія</a></li>
-          <li><a class="menu-item link" href="">Портфоліо</a></li>
-          <li><a class="menu-item link" href="">Контакти</a></li>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Студія</a></li>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Портфоліо</a></li>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Контакти</a></li>
         </ul>
       </nav>
         <ul class="list">
@@ -26,9 +29,9 @@
         </ul>
     </header>
     <main>
-    <section>
-        <h1>Ефективні рішення<br>для вашого бізнесу</br></h1>
-        <button class="modal-btn" type="button">Замовити послугу</button>
+    <section class="hero">
+        <h1 class="main-title">Ефективні рішення<br>для вашого бізнесу</br></h1>
+        <button class="modal-btn btn" type="button">Замовити послугу</button>
     </section>
     <section>
       <h2>Критерії</h2>
@@ -99,10 +102,10 @@
             <a>м. Київ, пр-т Лесі Українки, 26</a>
           </li>
           <li>
-            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="phone-namber link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
